syntax = "proto3";

package file;

option java_multiple_files = true;

service FileService{
  rpc upload(stream FileUploadRequest) returns(FileUploadResponse);
}


message MetaData{
  string name = 1;
  string type = 2;
  int32 size = 3;
}
message File{
  bytes contents = 1;
}
enum Status{
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}


message FileUploadRequest{
  oneof request{
    MetaData metadata = 1;
    File file = 2;
  }
}
message FileUploadResponse{
  string name = 1;
  Status status = 2;
}